# ResumeBuilder-haskellang

./: README.md
resume-builder/frontend/: index.js  package-lock.json  package.json
resume-builder/frontend/src/: App.css  api.js
resume-builder/frontend/src/api/: api.js
resume-builder/frontend/src/components/: App.js  CreateResumeForm.js  Dashboard.js  Login.js  ResumeForm.js  ResumeOptions.js  ResumePreview.js  SignUp.js  WelcomePage.css  WelcomePage.js
resume-builder/frontend/src/components/importResume/: FileTypeSelector.js  FileUpload.js  ImportResume.css  ImportResume.js  ValidateResume.js
resume-builder/frontend/src/styles/: CreateResumeForm.css  Dashboard.css  ResumeForm.css  ResumeOptions.css  ResumePreview.css  index.css
resume-builder/resume-builder-backend/: .gitignore  CHANGELOG.md  LICENSE  backend.cabal  resume_20250513174839.json
resume-builder/resume-builder-backend/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
resume-builder/resume-builder-backend/src/: Main.hs
