cabal-version:       >=1.10
name:                backend
version:             0.1.0.0
build-type:          Simple

executable backend
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <5,
                       http-types,
                       warp,
                       wai,
                       aeson,
                       bytestring,
                       text,
                       time
